[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = true

[project]
name = "phisap"
version = "0.2.0"
description = "[Android] Semi-automatic player for Phigros"
requires-python = ">=3.12"
dependencies = [
    "av>=17.0.1",
    "lz4>=4.4.5",
    "numpy>=2.4.6",
    "pyside6>=6.11.1",
    "pyusb>=1.3.1",
    "rich>=15.0.0",
    "shapely>=2.1.2",
    "skia-python>=144.0.post2",
    "z3-solver>=4.16.0.0"
]